tests/cases/smoke/invalid/class_pub_init_var.dp
class Fish {
    pub init var name: str
}
